[feature] openai requester class

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,7 @@
-API_TOKEN=123
-PROXY_URL=123
-PROXY_PASSWORD=123
-CHATGPT_PASSWORD=0
+BOT_TOKEN="123:abc"
+
+HTTP_PROXY_URL="ip:port"
+PROXY_AUTH="123:123"
+
+CHATGPT_PASSWORD=123
+CHATGPT_API_KEY=""
