--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Python Style Check
-        uses: weibullguy/python-lint-plus@v1.11.0
+        uses: ricardochaves/python-lint@v1.4.0
         with:
+          python-root-list: "."
+          use-pylint: false
           use-pycodestyle: true
+          use-flake8: false
+          use-black: false
+          use-mypy: false
+          use-isort: true
+          extra-pylint-options: ""
+          extra-pycodestyle-options: "--config=./.pycodestyle"
+          extra-flake8-options: ""
+          extra-black-options: ""
+          extra-mypy-options: ""
+          extra-isort-options: ""
