--- a/.env.dist
+++ b/.env.dist
@@ -3,8 +3,10 @@ PROJECT_NAME="ChatGPT_mediators"
 BOT_NAME="ChatGPT_DEMO"
 BOT_TOKEN="123:abc"
 
+ADMINS=[1344493803]
+
 HTTP_PROXY_URL="ip:port"
 PROXY_AUTH="123:123"
 
-CHATGPT_PASSWORD=123
+CHATGPT_PASSWORDS=["123"]
 CHATGPT_API_KEY=""
