--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,10 @@ PROJECT_NAME="ChatGPT_mediators"
 BOT_NAME="ChatGPT_DEMO"
 BOT_TOKEN="123:abc"
 
+LOGGING_BOT_TOKEN="123:123"
+LOGGING_FILE="logs/main.log"
+CONSOLE_LOGGING_LEVEL="DEBUG"
+
 ADMINS=[1344493803]
 
 HTTP_PROXY_URL="ip:port"
