added database initialization

--- a/.env.dist
+++ b/.env.dist
@@ -17,3 +17,9 @@ CHATGPT_API_KEY=""
 
 TESTS_API_ID=123
 TESTS_API_HASH=123
+
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_LOGIN=ai_mediator
+PG_PASSWORD=abc123
+PG_DBNAME=ai_mediator
