docker-compose database and adminer setup

--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,8 @@ PG_PORT=5432
 PG_LOGIN=ai_mediator
 PG_PASSWORD=abc123
 PG_DBNAME=ai_mediator
+
+# For docker-compose setup
+POSTGRES_USER=$PG_LOGIN
+POSTGRES_PASSWORD=$PG_PASSWORD
+POSTGRES_DB=$PG_DBNAME
