added privacy policy accepting

--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,7 @@ PG_DBNAME=ai_mediator
 POSTGRES_USER=$PG_LOGIN
 POSTGRES_PASSWORD=$PG_PASSWORD
 POSTGRES_DB=$PG_DBNAME
+
+
+# If not specified, bot wouldn`t asking to accept privacy policy
+PRIVACY_POLICY=telegra.ph/Politika-konfidencialnosti-04-01-3
